--- a/Geography Notes/J1 Geography Notes/4. 湿热的气候.md
+++ b/Geography Notes/J1 Geography Notes/4. 湿热的气候.md
@@ -8,7 +8,7 @@
 
 ## 4.2 马来西亚的气候特点
 
-![image-20220310235137138](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310235137138.png)
+![rain-temp](https://i.ibb.co/8Xz3g2Z/rainfall-temp.png)
 
 - **马来西亚**的气候属于**赤道型气候**，**全年高温多雨**
 - 年均温：27℃；年雨量：2000 - 2500mm
