--- a/Science Notes/J3 Science Notes/第五章 机械能.md
+++ b/Science Notes/J3 Science Notes/第五章 机械能.md
@@ -9,7 +9,7 @@
 #### 鉴别有没有做功
 
 - ![提着水桶向前走](https://i.ibb.co/CsYKvZ5/image.png)
-- 一个人**提着水桶匀速向前走**，**水桶在水平方向匀速向前移动**。水桶**受到的是向上的力**，**移动方向却是向前**，**与力的方向垂直**，所以**人并没有对水桶做功**
+- 一个人**提着水桶<u>匀速</u>向前走**，**水桶在水平方向匀速向前移动**。水桶**受到的是向上的力**，**移动方向却是向前**，**与力的方向垂直**，所以**人并没有对水桶做功**
 - ![提着水桶上楼梯](https://i.ibb.co/JQP5tLh/image.png)
 - 一个人**提着水桶上楼梯**，水桶向前及**向上匀速移动**，水桶**在力的方向发生了位移**，**人有对水桶做功**
 - ![举杠铃](https://i.ibb.co/hMRLvB0/image.png)
@@ -38,6 +38,8 @@
   - 力的方向与位移方向垂直
   - ![推车gonna die](https://i.ibb.co/bKtypkR/gonna-die.png)
   - 力的方向与位移方向相反
+  - ![丢铅球](https://i.ibb.co/q9xQCMt/image.png)
+  - **没有力作用在物体上**
   - **只要物体没有在*力的方向*发生位移，我们就说那个力没有对物体做功**
 
 #### 功与能的关系
@@ -56,8 +58,82 @@
   - 单位符号：**J、N、m**
   - 符号：**W、F、s**
   - 56J的物理意义：用56N的力使一个物体在力的方向上移动1m
+- 为了简便，我们常常将**匀速举高物体**时，**作用力做的功**，说成**克服重力所做的功**，而直接用公式**`W = mgh`**计算
+
+#### 重量与质量的关系
+
+- 物体的重量weight；物体的质量mass
+- `g = 9.8N` 表示**质量1kg**的物体**受到竖直向下的重力为9.8N**
+- ![苹果的重力与支持力](https://i.ibb.co/HhRyWM6/apple-tree.png)
+- `F = W = mg`
+
+#### 计算题例题
+
+1. ![机械能q1](https://i.ibb.co/6nsS8Pw/q1.png)
+2. ![机械能q2](https://i.ibb.co/FsWFHPK/q2.png)
+3. ![机械能q3](https://i.ibb.co/Pr7NX3k/q3.png)
 
 ## 5.2 功率
 
+### 5.2.1 做功快慢的量度
+
+- **功率**：描述**物体做工的快慢**
+- 功率的定义：**单位时间内所做的功**
+- `P = W / t`**【功率(W) = 功(J) / 时间(s)】**
+  - 单位：**瓦特、焦耳、秒**
+  - 单位符号：**W、J、s**
+  - 符号：**P、W、t**
+  - **千瓦(kW)**和**兆瓦(MW)**也可作为功率的单位
+- **功**是**能量转化的量度**
+- **功率**是**能量转换快慢的量度**
+- ***机器的功率越大，能量转化得越快***
+- ![功率q1](https://i.ibb.co/2tD3sfp/power-q1.png)
+  - 起重机的功率为3kW的意义
+    - 起重机每秒钟能够对外做3kJ的功
+    - 起重机每秒钟能够将电能转化为3kJ的机械能
+
+- ![power-q2](https://i.ibb.co/MgkvTtp/power-q2.png)
+
+## 5. 3 动能与势能
+
+### 5.3.1 动能
+
+- 物体**由于运动而具有的能**
+- 物体的动能与**物体的质量和速度**有关
+  - **质量越大，速度越大，动能就越大**
+
+- 一个飞机在飞行过程中**保持匀速**，则在飞行过程中**飞机的动能是否会发生变化**
+  - **动能会发生变化**（速度没变，但质量有改变）
+  - 飞机会**消耗燃油**，**质量会变小**，在匀速下，**动能也变小**
 
 
+### 5.3.2 势能
+
+- 势能：物体由于**被举高**或由于**发生形变**而具有的能
+
+#### 重力势能
+
+- **物体由于被举高而具有的能**
+- 物体的重力势能与**被举高度和质量**有关
+  - 物体的**质量越大**，所在**高度越高**，**重力势能越大**
+
+#### 弹性势能
+
+- **物体由于发生形变而具有的能**
+- 物体的弹性势能与**形变大小**有关
+  - 物体的**形变越大**，**弹性势能越大**
+
+### 5.3.3 动能和势能的转化
+
+- **能量守恒**
+  - **机械能的两种形式动能和势能会相互转化**
+  - 如果**只有动能和机械能相互转化**，**机械能的总量保持不变**，**机械能守恒**
+  - ![pendulum](https://i.ibb.co/Jv8dR2Z/pendulum.png)
+- 撑杆跳的能量转化
+  - 身体的**化学能**转化成了起跑的**动能**，撑杆时**动能**转化为杆的**弹性势能**，**弹性势能**把人带到空中，转化为**重力势能**，**重力势能**再转换成下落的**动能**
+  - **动能 → 弹性势能 → 重力势能 → 动能**
+- 水力发电站的能量转化
+  - ![水力发电](https://i.ibb.co/sF5CVKH/hydroelectricity.png)
+  - 大坝**拦水**，**储存**了大量的**势能**
+  - **水**通过大坝内的导管**向低处流动**时，水的**势能转化为动能**
+  - **流动的水冲击水轮机**的叶轮，将**动能传递**给水轮机，带动**发电机发电**
