--- a/Geography Notes/J1 Geography Notes/3. 多样的地形.md
+++ b/Geography Notes/J1 Geography Notes/3. 多样的地形.md
@@ -2,7 +2,7 @@
 
 ## 3.1 马来西亚的位置
 
-![马来西亚在世界的位置](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\Screenshot 2022-03-10 102041.png)
+![马来西亚在世界的位置](https://i.ibb.co/myRQLv8/malaysia-place.png)
 
 - 马来西亚位于**亚洲的东南部**（a.k.a. **东南亚**）
 - 由**马来西亚半岛**、**砂拉越**和**沙巴**组成
@@ -10,20 +10,23 @@
   - **东经100度至东经120度**
   - **北纬1度至北纬7度**
 
-![image-20220310102434215](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310102434215.png)
+![asia](https://i.ibb.co/yf7hqPc/asia.png)
 
 - *马来西亚半岛*北部与泰国接壤，南部隔柔佛海峡与新加坡对望，东临南中国海，西濒马六甲海峡与印尼的苏门答腊岛相隔
 - *砂拉越及沙巴*位于婆罗洲岛北部，西濒南中国海，东临苏拉威西海，南部与印尼的加里曼丹省接壤，与文莱毗邻（pílín）
-- 马来西亚**位于马六甲海峡的出入口**，是**太平洋和印度洋之间的交通要道**，也是**世界航海和航空运输的枢纽**
-- 马来西亚**靠近赤道**，属于**热带国家**，适合**种植热带农作物**
-- 马来西亚**处于严重自然灾害范围以外**，既**没有地震，火山爆发**，也**没有台风**的灾害，是**生活和度假的好地方**
+- 马来西亚地理位置的优越性
+  - 马来西亚**位于马六甲海峡的出入口**，是**太平洋和印度洋之间的交通要道**，也是**世界航海和航空运输的枢纽**
+  - 马来西亚**靠近赤道**，属于**热带国家**，适合**种植热带农作物**（油棕、橡胶、可可）
+  - 马来西亚**处于严重自然灾害范围以外**，既**没有地震，火山爆发**，也**没有台风**的灾害，是**生活和度假的好地方**
+
 
 ## 3.2 马来西亚的行政区
 
-![image-20220310103637330](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310103637330.png)
+![malaysia](https://i.ibb.co/xYqNXPN/malaysia.png)
 
 - 马来西亚由**十三个州**和**三个联邦直辖区**组成
 - 这三个联邦直辖区分别是：**吉隆坡、纳闽和布城**
+- 最大：砂拉越；半岛最大：彭亨；最小：玻璃市
 
 ## 3.3 马来西亚的地形
 
@@ -34,7 +37,7 @@
 - **连绵不断的山地**称为**山脉**
 - 山地主要分布在**马来西亚半岛中部**、**砂拉越及沙巴内陆地区**，是马来西亚**地形的主要特征**
 
-![image-20220310104402758](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310104402758.png)
+![mountain](https://i.ibb.co/kHcbLNW/mountain.png)
 
 - *马来西亚半岛* **地势北高南低**，山脉向南逐渐低降为坡度平缓的丘陵
 - *沙巴砂拉越*的地势**从内陆向沿海逐渐降低**
@@ -44,10 +47,11 @@
 
 ### 3.3.2 平原及海岸区
 
-![image-20220310105056528](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310105056528.png)
+![plain](https://i.ibb.co/wB0qV8Z/malaysia-plain.png)
 
 - 马来西亚的**平原区**包括了**三角洲、河谷平原和海岸平原**等**海拔200米以下**，**地面平坦**的地区
 - 马来西亚**常见的海岸地形**有：**岛屿、沙滩、海湾、岬角等**
+- 马来西亚的米仓：吉打平原；东南亚的米仓：泰国（湄南河三角洲）
 
 ## 3.4 地形对生活的重要性
 
@@ -72,7 +76,7 @@
 
 ## 3.5 壮阔的河川
 
-![image-20220310112427944](C:\Users\wongj\Documents\Typora\Geography Notes\J1 Geography Notes\image-20220310112427944.png)
+![river](https://i.ibb.co/fCtptSF/malyasia-river.png)
 
 ### 河流对生活的重要性
 
@@ -91,6 +95,13 @@
    - **河流**是很好的**休闲地区**，可以进行多种**康乐活动**
 6. **天然界限**
    - **河流**可以**作为天然界限**，如**吉兰丹的哥乐河**是**马来西亚和泰国的分界线**
+
+### 保护河流的措施
+
+- 措施：**政府/国家**可以做的事，非个人
+
+1. 对于**排污系统不合法的工厂**，政府应采取**罚款或强迫搬迁**的措施
+2. 通过**教育宣传**，让国民了解**爱护河流的重要性**
 
 ## 3.6 水污染的原因
 
