--- a/Science Notes/J3 Science Notes/第五章 机械能.md
+++ b/Science Notes/J3 Science Notes/第五章 机械能.md
@@ -77,9 +77,10 @@
 
 ### 5.2.1 做功快慢的量度
 
-- **功率**：描述**物体做工的快慢**
-- 功率的定义：**单位时间内所做的功**
+- **功率**：描述**物体<u>做工的快慢</u>**
+- 功率的定义：**单位时间内所做的功**，功与做功所用时间之比
 - `P = W / t`**【功率(W) = 功(J) / 时间(s)】**
+  
   - 单位：**瓦特、焦耳、秒**
   - 单位符号：**W、J、s**
   - 符号：**P、W、t**
@@ -93,6 +94,20 @@
     - 起重机每秒钟能够将电能转化为3kJ的机械能
 
 - ![power-q2](https://i.ibb.co/MgkvTtp/power-q2.png)
+
+- 功率的导出公式
+
+  - `P = Fv`
+
+  - $$
+    P = \frac{W}{t} = \frac{Fs}{t} = F·\frac{s}{t} = Fv
+    $$
+
+  - 当坡路较长或较陡时，司机开成上坡总将挡位换成低档
+
+    - 根据公式`P = Fv`，功率P一定时，速度v越小，力F越大。
+    - 汽车最大输出功率一定，上坡时，通过换挡降低行驶速度，从而获得较大的前进动力
+
 
 ## 5. 3 动能与势能
 
