--- a/Science Notes/J3 Science Notes/第五章 机械能.md
+++ b/Science Notes/J3 Science Notes/第五章 机械能.md
@@ -77,7 +77,7 @@
 
 ### 5.2.1 做功快慢的量度
 
-- **功率**：描述**物体<u>做工的快慢</u>**
+- **功率**：描述**物体<u>做工的快慢</u>**(不是做功的大小)
 - 功率的定义：**单位时间内所做的功**，功与做功所用时间之比
 - `P = W / t`**【功率(W) = 功(J) / 时间(s)】**
   
@@ -108,18 +108,23 @@
     - 根据公式`P = Fv`，功率P一定时，速度v越小，力F越大。
     - 汽车最大输出功率一定，上坡时，通过换挡降低行驶速度，从而获得较大的前进动力
 
-
 ## 5. 3 动能与势能
+
+- **物体能够对外做功，表示这个物体具有能量，简称能**
+- 能的单位：焦耳(J)
+- 一个物体能够做的功越多，表示这个物体的能量越大
 
 ### 5.3.1 动能
 
-- 物体**由于运动而具有的能**
+- 动能：物体**由于运动而具有的能**
 - 物体的动能与**物体的质量和速度**有关
   - **质量越大，速度越大，动能就越大**
-
 - 一个飞机在飞行过程中**保持匀速**，则在飞行过程中**飞机的动能是否会发生变化**
   - **动能会发生变化**（速度没变，但质量有改变）
   - 飞机会**消耗燃油**，**质量会变小**，在匀速下，**动能也变小**
+- 为什么在同样的道路上，对**不同的车型**，交通管理部门会设定**不一样的最高行驶速度**
+  - **运动速度相同的物体，质量越大，动能越大**
+  - 在道路行驶时，**质量较大的车型危险性就较大**
 
 
 ### 5.3.2 势能
@@ -131,6 +136,7 @@
 - **物体由于被举高而具有的能**
 - 物体的重力势能与**被举高度和质量**有关
   - 物体的**质量越大**，所在**高度越高**，**重力势能越大**
+- 
 
 #### 弹性势能
 
