--- a/Science Notes/J3 Science Notes/第五章 机械能.md
+++ b/Science Notes/J3 Science Notes/第五章 机械能.md
@@ -136,7 +136,6 @@
 - **物体由于被举高而具有的能**
 - 物体的重力势能与**被举高度和质量**有关
   - 物体的**质量越大**，所在**高度越高**，**重力势能越大**
-- 
 
 #### 弹性势能
 
@@ -146,15 +145,55 @@
 
 ### 5.3.3 动能和势能的转化
 
+- **机械能**
+  - **动能、势能**统称为机械能
+  - 物体具有的**机械能等于动能、势能两种能量之和**
 - **能量守恒**
   - **机械能的两种形式动能和势能会相互转化**
   - 如果**只有动能和机械能相互转化**，**机械能的总量保持不变**，**机械能守恒**
   - ![pendulum](https://i.ibb.co/Jv8dR2Z/pendulum.png)
+    - 小球在最高点时速度为零，因此动能为零，只有重力势能
+    - 单摆的摆动都不会永远持续下去，小球上升的高度会逐渐变小，最后停止摆动。这是因为无论是滚摆还是单摆，在实际运动的过程中都会有阻力存在，机械能会转化为其他形式的能
+    - 但是如果**只有动能和机械能相互转化**，**机械能的总量是保持不变的**，或者说，**机械能守恒**
+- 滚摆/皮球的能量转化
+  - 滚摆/皮球**向下转动**的过程中
+    - 高度变小，重力势能变小
+    - 速度变大，动能变大
+    - **重力势能转化为动能**
+  - 滚摆/皮球**向上转动**的过程中
+    - 高度变大，重力势能变大
+    - 速度变小，动能变小
+    - **动能转化为重力势能**
+- 篮球的能量转化
+  - 篮球**接触地面**的过程中
+    - 弹性形变变大，弹性势能变大
+    - 速度变小，动能变小
+    - **动能转化为弹性势能**
+  - 篮球**离开地面**的过程中
+    - 弹性形变变小，弹性势能变小
+    - 速度变大，动能变大
+    - **弹性势能转化为动能**
+- 射箭时的能量转化
+  - 弓的**弹性势能**转化为箭的**动能**
 - 撑杆跳的能量转化
   - 身体的**化学能**转化成了起跑的**动能**，撑杆时**动能**转化为杆的**弹性势能**，**弹性势能**把人带到空中，转化为**重力势能**，**重力势能**再转换成下落的**动能**
   - **动能 → 弹性势能 → 重力势能 → 动能**
+- 过山车的能量转化
+  - 过山车在启动之后总会有一个”爬坡“的过程
+  - 在上坡时：动能转化为重力势能
+  - 下坡时：重力势能转化为动能
+- 人造地球卫星的机械能转化
+  - ![近地点远地点](https://www.easyatm.com.tw/img/f/c4f/nBnauM3X3EDN5cDN4YzM4MzN0QTMwITOzEDMwADMwAjMwIzL2MzLygzLt92YucmbvRWdo5Cd0FmLwE2LvoDc0RHa.jpg)
+  - 近地点：距离地球最近的点
+  - 远地点：距离地球最远的点
+    - 势能最大
+  - 卫星从远地点向近地点运动时，它的势能减小，动能增大，速度也就增大
+  - 卫星从近地点向近远地点运动时，它的势能增大，动能减小，速度也就减小
 - 水力发电站的能量转化
   - ![水力发电](https://i.ibb.co/sF5CVKH/hydroelectricity.png)
   - 大坝**拦水**，**储存**了大量的**势能**
   - **水**通过大坝内的导管**向低处流动**时，水的**势能转化为动能**
+    - 水位差越大，重力势能越大，转化的动能越大，能发出的电就越多
   - **流动的水冲击水轮机**的叶轮，将**动能传递**给水轮机，带动**发电机发电**
+- 风力发电
+  - 空气的机械能转化为动能
