heheboi many 测验 i wanna die

--- a/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
+++ b/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
@@ -44,7 +44,7 @@
   - **充足的劳动力及资金**
   - **良好的运输系统**
   - **广大的市场**
-  - **现代化科技的使用**
+  - **现代化科技的使用**，以提高产量
 
 #### 农业类型
 
@@ -103,7 +103,7 @@
    - 由于**乳制品不耐久藏**，所以乳农业地区大多**靠近消费市场**
    - 分布在`西北欧及北美东部`的**人口稠密区**
 
-### 3.3.3 农牧业带来的问题
+### 3.2.3 农牧业带来的问题
 
 #### 农业带来的环境问题和解决方法
 
