--- a/Science Notes/J3 Science Notes/第六章 热.md
+++ b/Science Notes/J3 Science Notes/第六章 热.md
@@ -5,18 +5,27 @@
 ### 6.1.1 热传递及其量度
 
 - **热传递**
-  - 热从**高温物体传给低温物体**的过程
-  - 热从物体的**高温部分传给低温部分的过程**
-  - 发生热传递的条件：**温度差**
+  - 在两个存有**温度差**的物体间，热(能量)从**高温物体传给低温物体**的过程，或从同一物体的**高温部分传给低温部分的过程**
+  - 发生热传递的条件：物体之间有**温度差**
   - **高温物体放出热量，温度降低；低温物体吸收热量，温度升高**
+  - 发生热传递时，能量**一定**是从**高温**物体传向**低温**物体，而不一定是从具有内能多的物体转向具有内能少的物体
   - **物体吸收或放出的热量和物体温度的升高或降低量成正比**
   - 热传递会在**两个物体的温度相同**后才会**停止**（**热平衡**）
+  - 热传递的**实质**：**<u>能量</u>的转移**
 - **热量**：热传递中**物体吸收或放出热的多少**
-  - 热量对应热传递的过程，**没有热传递就没有热量**
+  - 热传递过程中**传递能量**的多少
+  - 热量对应热传递的过程，说过程量，**没有热传递就没有热量**
+  - 符号：Q
   - 单位：**焦耳(J)**【千焦(kJ)】
 - 热传递的例子
   - **退热贴**通过**凝胶中的水分的汽化吸收体内的热量**，从而**降低体温**
   - **变温动物**不能通过自身的调节来维持体温，它们是**通过与外界的热传递使自己保持适当的体温的**
+  - 热水袋捂热手
+    - 热水袋温度降低，热能减少
+    - 双手温度升高，热能增加
+    - 热水袋的能量转移到了双手
+    - 双手的温度渐渐升高，热水袋的温度会渐渐降低
+    - 当双手和热水袋的温度一致时，就不会发生热传递
 
 ### 6.1.2 热传递的快慢与温差的关系
 
@@ -29,18 +38,42 @@
 - 气体、液体和固体都是由分子、原子或离子等粒子构成的
 - 这些**粒子都在永不停息地做无规则运动**
   - **布朗运动**：悬浮在液体或气体中的微粒所做的永不停息的无规则运动
-  - **扩散**：分子通过布朗运动从高浓度区域向低浓度区域的运输的过程
+  - **扩散**：
+    - **不同**物质在**互相接触**时，**彼此进入对方**的现象
+    - **气体、液体和固体**都可以发生扩散
+    - **温度越高**，扩散得**越快**
 - 构成物质的大量粒子的**无规则运动的剧烈程度跟温度直接相关**
   - **温度越高，粒子运动越激烈**
-  - 例：温度越高，液体蒸发的越快
+  -  例：温度越高，液体蒸发的越快
 - **热运动：大量粒子的无规则运动**
+
+#### 粒子势能
+
+- 分子间同时存在相互作用的**引力**和**斥力**
+- **分子间作用力与距离的关系**
+  - 当**分子间距离很小**时，作用力表现为**斥力**
+  - 当**分子间的距离稍大**时，作用力表现为**引力**
+- 当**分子间距离**变得很**大**时，**引力**和**斥力**就可以**忽略不计**，此时物体就是**气体**状态
+  - 正是因为**分子间距离大**，分子间**作用力微弱**，因此气体**容易被压缩**且具有**流动性**，**难以保持一定的形状和体积**
+- **固体分子间距离小**，**作用力强**，使得固体**不易被压缩或拉伸**，有**确定的形状或体积**
+- **液体分子间距离介于以上两者之间**，**分子没有固定的位置**，**运动比较自由**，这样的结构使得液体**不容易被压缩**，**具有流动性**
 
 ### 6.2.2 热能
 
+- 运动的分子具有动能：**分子动能**
+- 互相吸引或排斥的分子也具有势能：**分子势能**
+- **热能（内能）**：构成物体的**所有分子**，其**热运动的动能与分子势能的总和**
+  - 单位：**焦耳(J)**
+  - **热能**是**不同于机械能的另一种形式的能**
+  - **一切物体，不论温度高低，都具有内能**
+  - 物体温度降低时，内能减少；物体温度升高时，内能增加
+- **静止**在**水平**地面上的小汽车
+  - 动能为零，重力势能为零，机械能为零
+  - **所有的分子都在不停的做无规则运动**，**内能不为零**
 - **热能**：**物体**由于**内部大量粒子的热运动而具有的能**
 - 温度越高，内部粒子的无规则运动越剧烈，粒子无规则运动的平均动能就越大，物体的热能也就越大
 - **物体的温度越高，热能就越大**
-- 物体的温度再低，其内部分子的动能永远不可能为零，因此**物体的热能不可能为零**
+- 物体的温度再低，其内部**分子的动能永远不可能为零**，因此**物体的热能不可能为零**
   - 冰冷的冰雪也具有热能，只是热能较少
 - 两个存有温度差的**物体之间的热传递实质上是物体之间热能的转移**
   - 由于热量是**物体在热传递过程中热能改变的量度**，因此**物体吸收或减少多少热量，热能就会增加或减少多少**
@@ -59,6 +92,12 @@
   - **阻碍或减缓传导**
     - **葡萄酒杯的柄**可以阻碍热从手传到葡萄酒
     - **湿式潜水衣**中的**含水的夹层**可以帮助潜水员保温，因为水是热的不良导体
+
+### 区分温度、热能、热量
+
+- **温度和热能**是**状态量**
+- 发生热传递才出现热量，**热量是过程量**
+- 物体本身具有热能，不具有热量，只能说吸收热量或放出热量
 
 ## 6.4 对流
 
