--- a/Science Notes/J3 Science Notes/第三章 金属与非金属.md
+++ b/Science Notes/J3 Science Notes/第三章 金属与非金属.md
@@ -182,7 +182,7 @@
 - **铁的锈蚀**
 
   - 铁在**潮湿的空气**中**被氧气氧化而生锈**
-  - 铁锈的主要成分是**氧化铁(III)**[^铁锈主要成分]
+  - 铁锈的主要成分是**氧化铁(III)**[^铁锈主要成分] 
 
   [^铁锈主要成分]: 其实是三甲氧化铁的水合物和氢氧化铁[Fe~2~O~3~ · H~2~O, Fe(OH)~3~]
 
@@ -200,13 +200,13 @@
   - 物理方法：**用砂纸打磨**
   - 化学方法：**用酸清洗**，酸不能过量
     - Fe~2~O~3~ + 6HCl ——> 2FeCl~3~ + H~2~O
-    - Fe~2~O~3~ + 3H~2~SO~4~ ——> Fe~2~(SO~4~)~3~ + 3H~2~O
+    - Fe~2~O~3~ + 3H~2~SO~4~ ——>  Fe~2~(SO~4~)~3~ + 3H~2~O
   - 更高效的除锈法：电解抛光
 
 - **铜的锈蚀**
 
   - 铜被锈蚀的结果：**铜锈/铜绿**
-  - 铜锈主要成分为Cu~2~(OH)~2~CO~3~ · nH~2~O【水和碱式碳酸铜】
+  - 铜锈主要成分为Cu~2~(OH)~2~CO~3~ · n                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         H~2~O【水和碱式碳酸铜】
   - 根据质量守恒，我们不难判断出**铜生锈的条件是水(H~2~O)、氧气(O~2~)、二氧化碳(CO~2~)**
 
 ## 3.5 化学反应的基本类型
@@ -229,4 +229,18 @@
    - 条件：**有气体、沉淀或水生成**
    - 特点：**化学反应前后各元素化合价不变**
    - ![复分解反应](https://i.ibb.co/523mF8X/image.png)
-   - ![常见复分解反应类型](https://i.ibb.co/Y7VXd8x/image.png)
+   - ![常见复分解反应类型](https://i.ibb.co/Y7VXd8x/image.png)      
+
+## 重点题
+
+![img](https://e.foonyew.edu.my/pluginfile.php/133221/question/questiontext/2818080/16/442034/Picture1.png)
+
+- 废液中含有FeCl~2~及CuCl~2~
+- 加入铁粉后，铁粉置换CuCl~2~中的Cu，滤液B为FeCl~2~
+- 滤渣A为过量铁粉及被置换出来的Cu的混合物
+- 加入溶液C，既HCl后，HCl与Cu反应生产氯化铜
+- 滤渣中的铁将氯化铜中的铜置换出来，滤渣B为Cu，滤液B为FeCl~2~
+
+
+
+o
