--- a/Science Notes/J3 Science Notes/第六章 热.md
+++ b/Science Notes/J3 Science Notes/第六章 热.md
@@ -106,6 +106,58 @@
 - **对流：靠液体和气体的循环流动来传热的方式**
   - 实质：**随着液体和气体的流动，运动较为剧烈的粒子和运动不那么剧烈的粒子位置发生改变的过程**
 - 例子
-  - ![汽车散热器](https://i.ibb.co/8M02Wpg/vehicle-condenser.png)
-  - 发热体气缸外部装有水套，气缸通过传导把热传给水套内的水，水受膨胀从上面的管子流入散热器，热水把热传导给散热器的金属片，并由金属片散出去
-  - 
+  1. ![汽车散热器](https://i.ibb.co/8M02Wpg/vehicle-condenser.png)
+     - 发热体气缸外部装有水套，气缸通过传导把热传给水套内的水，水受膨胀从上面的管子流入散热器，热水把热传导给散热器的金属片，并由金属片散出去
+  2. 用汤匙让热汤的温度快速降下来
+     - 对液面吹气，促进液面上方空气对流，加速汤的蒸发
+     - 用汤匙不断地搅动，促进碗里汤的对流
+  3. 抽风机
+     - 抽风机向外排气时，室内的气压将小于室外的气压
+     - 室外空气就会从抽风机对面的窗户等进气口进入室内
+     - 人为制造的空气对流
+  4. 冷气会装在房间内较高的位置，进气孔会在冷气的最上方
+     - 暖气片附近的空气受热，密度很小，向上流动，房间上部密度较大的空气会下降补充，形成对流
+
+### 6.4.2 海陆风的形成
+
+- **海风**：***白天***从海面吹向陆地
+  - **白天陆地的温度比海水温度高**，近地的空气因受热而上升，海面上温度较低的空气就会移进来填补它的位置
+- **陆风**：***夜晚***从陆地吹向海面
+  - 陆地的温度下降的比海水快，海水的温度比陆地高，海面上方的空气受热而上升，陆地上温度较低的空气就会移进来填补他的位置
+- 岩石比热低，水比热高
+  - 比热：单位质量的某种物质，温度升高1°C吸收的热量
+  - 水的比热：4.2J (1 cal)
+- **海陆风**是因**温度的不均匀**而导致**对流**的形成的
+
+## 6.5 辐射
+
+### 6.5.1 辐射及其应用
+
+- **辐射**：**热由物体沿直线向外射出去的方式**
+- **辐射传热不需要借助介质**，辐射可以在**真空**中进行
+- **太阳**是通过**辐射**将能量传递到地球
+- 辐射的实质是**温度较高的物体直接把能量传送给温度较低的物体的过程**
+- 生活中常用辐射来加热和散热
+  - 烧烤食物时热源主要以辐射的方式传递给食物
+  - 汽车发动机冷却系统中的散热器通过散热片将热量以辐射的方式直接散发出去
+
+### 6.5.2 吸收辐射的影响因素
+
+- 黑色的物体对辐射的吸收能力比白色的物体强
+- 表面粗糙的物体对辐射的吸收能力比表面光滑的物体强
+- 夏装通常是白色和浅色的是为了减少对辐射的吸收；冬装通常是黑色或深色的以增加对太阳辐射的吸收
+
+### 辐射计
+
+
+
+## 6.6 保温瓶
+
+![保温瓶](https://i.ibb.co/d7WNYS8/image.png)
+
+
+
+
+
+![太阳能热水器](https://i.ibb.co/4SBRvSt/solar-water-heating.png)
+
