exam is cumingggggg

--- a/Science Notes/J3 Science Notes/第一章 酸和氢气.md
+++ b/Science Notes/J3 Science Notes/第一章 酸和氢气.md
@@ -71,7 +71,7 @@
 
 5. **与碳酸盐反应**
 
-   - **酸 + 硝酸盐 → 盐 + 水 + 二氧化碳**[^实质1]
+   - **酸 + 碳酸盐 → 盐 + 水 + 二氧化碳**[^实质1]
      - 2HCl + CaCO~3~ → CaCI~2~ + H~2~O + CO~2~↑[^实质2]
      - Na~2~CO~3~  + H~2~SO~4~ → Na~2~SO~4~ + H~2~O + CO~2~↑
 
@@ -86,7 +86,7 @@
 
   - **氯化氢**的**水溶液**[^水溶液]
   
-  - **无色**[^工业盐酸]的液态酸，具有**刺激性气味**
+  - **无色**[^工业盐酸]的液态酸，具有**刺激性气味**，若盐酸呈**其他颜色**则盐酸内有**杂质**
   
   - 是**混合物**，浓盐酸的质量分数约为 37% - 38%
   
@@ -149,7 +149,7 @@
   - **稀释浓硫酸**
   
     - **浓硫酸和水**能以任意比例**互溶**[^互溶]，并**大量放热**
-    - ![稀释浓硫酸时的pH变化](https://scontent.fkul14-1.fna.fbcdn.net/v/t1.15752-9/273973578_263196795856600_432910367728591292_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=ae9488&_nc_ohc=iGaFtQ2Na1QAX_x61LA&_nc_ht=scontent.fkul14-1.fna&oh=03_AVJmZmocQGR_bqL2aKvzzeDdZdj8a61Vuv4MogXQh9B8YA&oe=6240D4FD)
+    - 由于硫酸稀释时酸性会不断减弱，故其pH会不断增大，但不管怎样稀释溶液也不会呈中性，即**溶液的pH只能永远的接近7但不会达到7**
     - 稀释时需**将浓硫酸沿烧杯壁缓缓注入水中**，同时**用玻璃棒不断搅拌**，使浓硫酸溶于水时产生的热量及时逸散
     - 倘若把水倒入浓硫酸中，水可能会因沸腾而溅出，引发事故
   
@@ -179,6 +179,9 @@
   - **硝酸与金属反应**[^硝酸除外]
   
     - **硝酸**具有**强氧化性**[^强氧化性]，能与除金、铂以外的**大多数金属反应**，但**不会产生氢气**，而是**根据硝酸的浓稀**生成**二氧化氮**或**一氧化氮**
+      - **浓度**影响物质的氧化性（或还原性），金属与硝酸反应，不断消耗硝酸，硝酸的**浓度减小**，**氧化性减弱**，所以在跟同一还原剂（铜）的条件下，氧化性越低，硝酸被还原得越彻底，所以产物会随着硝酸的浓度降低而氮元素从+4，+3，+2，+1，0，-3递减（不仅仅有NO~2~，NO或N2O）。非金属与硝酸反应也是如此.
+      - 同理，**浓硫酸**也是强氧化性酸，**和金属反应生成二氧化硫**，而**不是氢气**。
+      
     - **稀硝酸 + 金属 → 盐 + 二氧化氮 + 水**
       - 8HNO~3~ + 3Cu → 3Cu(NO~3~) + 2NO↑+ 4H~2~O
     - **浓硫酸[^浓硫酸浓度范围] + 金属 → 盐 + 一氧化氮 + 水**
@@ -231,7 +234,7 @@
 
 #### 氢气还原氧化铜
 
-![氢气还原氧化铜](https://scontent.fkul14-1.fna.fbcdn.net/v/t1.15752-9/274310023_372663868016267_1820657252152611632_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Grtm-pZrKlkAX8JzkV2&_nc_ht=scontent.fkul14-1.fna&oh=03_AVIKgc4ahHRHDh4LearRmrVRcP84Oeb1V0xkYyJO_EoDkQ&oe=623F3538)
+![氢气还原氧化铜]()
 
 - 锌和盐酸反应生成**具有还原性的氢气**，盐酸也会挥发**氯化氢气体**
 - **氢氧化钠溶液**可以**吸收氯化氢气体**，并与其反应**生成氯化钠和水蒸气**
@@ -302,4 +305,8 @@
 `救命我刚刚五点没起得来，现在六点二十分了，我第一章没读完就算了，第二章完全没开始温习啊啊啊`
 
 `by jiahuiiiii @ 24th Feb 2022 06:18`
+
+`hi 有时候真的不知道自己在颓废啥`
+
+`by jiahuiiiii @ 17th April 2022 02:09`
 
