--- a/Science Notes/J3 Science Notes/第六章 热.md
+++ b/Science Notes/J3 Science Notes/第六章 热.md
@@ -98,6 +98,9 @@
 - **温度和热能**是**状态量**
 - 发生热传递才出现热量，**热量是过程量**
 - 物体本身具有热能，不具有热量，只能说吸收热量或放出热量
+- 温度：表示物体的冷热程度
+- 热能：构成物体的所有分子，其热运动的动能和分子势能的总和
+- 热量：热传递过程中传递热量的多少
 
 ## 6.4 对流
 
@@ -143,21 +146,26 @@
 
 ### 6.5.2 吸收辐射的影响因素
 
-- 黑色的物体对辐射的吸收能力比白色的物体强
-- 表面粗糙的物体对辐射的吸收能力比表面光滑的物体强
-- 夏装通常是白色和浅色的是为了减少对辐射的吸收；冬装通常是黑色或深色的以增加对太阳辐射的吸收
+- **黑色的物体**对辐射的吸收能力比白色的物体强
+- **表面粗糙的物体**对辐射的吸收能力比表面光滑的物体强
+- 夏装通常是白色和浅色的是为了**减少对辐射的吸收**；冬装通常是黑色或深色的以**增加对太阳辐射的吸收**
 
 ### 辐射计
 
-
+- **辐射越强，叶片转动越快**
 
 ## 6.6 保温瓶
 
 ![保温瓶](https://i.ibb.co/d7WNYS8/image.png)
 
-
-
-
+- **双层玻璃胆之间被抽成真空**以避免**热的传导和对流**
+- 表面**镀银或铝**以隔绝**辐射**
+  - 当瓶胆内装的是**热水**时，玻璃镀银面可以**阻碍瓶内向外界的辐射**
+  - 当瓶胆内装的是**冷水**时，玻璃镀银面可以**阻碍外界向瓶内的辐射**
+- **瓶塞**用**软木或塑料**做成，两者皆为**热的不良导体**
+- 保温瓶：**把热传递的三种方式都降到最低程度，达到保温的效果**
 
 ![太阳能热水器](https://i.ibb.co/4SBRvSt/solar-water-heating.png)
+
+- 
 
