--- a/Science Notes/J3 Science Notes/第四章 地球矿物资源的开发和利用.md
+++ b/Science Notes/J3 Science Notes/第四章 地球矿物资源的开发和利用.md
@@ -5,9 +5,9 @@
 ### 4.1.1 什么是矿物
 
 - **矿物**是**天然形成的**，具有**固定的化学成分**，和**晶体结构**的**固态无机物**
-  - “天然形成的”：形成过程不受人为影响，所以塑料、玻璃及钢铁等人造物都不是矿物
-  - “无机物”：煤来自植物残骸、含有机物，不是矿物
-  - “固态”：汽油和天然气都不是固体，也不是矿物
+  - “天然形成的”：形成过程不受人为影响，所以**塑料、玻璃及钢铁**等人造物都不是矿物
+  - “无机物”：**煤**来自植物残骸、含有机物，不是矿物
+  - “固态”：**汽油和天然气**都不是固体，也不是矿物
   - “晶体”：以同种方式排列形成的固体
   - ”固体的化学成分”：元素组成的含量是不变的
 - 矿物是**构成地壳岩石的物质基础**，**岩石由多种矿物混合而成**，**岩石的性质**取决于它们**所含的矿物等种类和含量**
@@ -96,6 +96,7 @@
 5. **制硅**
 
    - SiO~2~ + 2C —高温—>  **Si** + 2CO↑
+6. 不活泼，不与水反应，不溶于水，受热不分解
 
 ####  结晶二氧化硅
 
@@ -150,7 +151,7 @@
 - 用途：**干燥剂**
 - **生石灰与水混合**发生反应**生成熟石灰**，这个反应会**大量放热**，是**放热反应**
   - 一些食品，如自热火锅就是用此原理加热食物
-
+- 可以做碱性气体干燥剂
 
 #### 熟石灰/消石灰
 
@@ -181,7 +182,7 @@
 - **纯净的方解石晶体**：**光学设备、显微镜的棱镜**
 - **沙子中含有的石英**：制造**玻璃、电子设备和手表**
 
-### 4.5.2 从矿物中提炼金属
+### 4.5.2 从矿物中提炼金属【还原】
 
 - 让**金属氧化物与碳在高温下反应**，让**碳夺走金属氧化物中的氧**，从而**得到金属单质**
 - **一氧化碳还原氧化铁**
@@ -199,7 +200,7 @@
     - 因此此反应**不属于任何一种基本反应类型**，而是**氧化还原反应**
 
 - **工业高铝炼铁**
-  - 把**铁矿石和焦炭、石灰石**一起加入高炉
+  - 把**铁矿石和焦炭(C)、石灰石(CaCO~3~)**一起加入高炉
   - 从**下方通入热风**，**焦炭在炉内反应生成一氧化碳**
   - **一氧化碳和氧化铁(III)在高温下反应生成铁**
 
