--- a/Science Notes/J3 Science Notes/第一章 酸和氢气.md
+++ b/Science Notes/J3 Science Notes/第一章 酸和氢气.md
@@ -279,6 +279,7 @@
    - 实验室里一般选用**锌和稀硫酸**反应
      - **Zn + H~2~SO~4~ → ZnSO~4~ + H~2~↑**
      - 原因：**锌的反应速率适中**，**稀硫酸不会挥发**，所以可以**收集到较为纯净的氢气**
+   - **钾、钙、钠金属活动性太强**，如果和酸反应，应会先和水反应，**无法从酸中置换出氢气**
 
 ### 氢气的工业制法
 
