--- a/Science Notes/J3 Science Notes/第五章 机械能.md
+++ b/Science Notes/J3 Science Notes/第五章 机械能.md
@@ -15,7 +15,7 @@
 - ![举杠铃](https://i.ibb.co/hMRLvB0/image.png)
 - 举重运动员**举着杠铃不动**，虽然**有力作用在物体上**，但**物体静止**，没有移动，所以**运动员没有对杠铃做功**
 - ![丢铅球](https://i.ibb.co/q9xQCMt/image.png)
-- 球飞**到空中会继续移动**是因为惯性，在这一瞬间**没有力作用在铅球上**，所以**人对铅球没有做功**
+- 球飞**到空中会继续移动**是因为**惯性**，在这一瞬间**没有力作用在铅球上**，所以**人对铅球没有做功**
 - ![钢索及重物](https://i.ibb.co/LtrFKhc/image.png)
   1. 重物沿水平方向匀速运动时，重物移动的方向与拉力方向垂直，故钢索的拉力对重物不做功
   2. 重物静止不动时，钢索的拉力对重物没有做功
@@ -59,6 +59,8 @@
   - 符号：**W、F、s**
   - 56J的物理意义：用56N的力使一个物体在力的方向上移动1m
 - 为了简便，我们常常将**匀速举高物体**时，**作用力做的功**，说成**克服重力所做的功**，而直接用公式**`W = mgh`**计算
+  - 题目给了重量就不用mgh，直接写Fs
+
 
 #### 重量与质量的关系
 
