--- a/Science Notes/J3 Science Notes/第四章 地球矿物资源的开发和利用.md
+++ b/Science Notes/J3 Science Notes/第四章 地球矿物资源的开发和利用.md
@@ -165,7 +165,7 @@
   - 这就是**熟石灰可以作为建筑材料**的化学原理
 
 - 在树木上涂**石灰浆和硫磺粉的混合物**可以**保护树木**
-- **石灰乳和硫酸铜**配置的**波尔多液**可做**农药**使用
+- **石灰乳和胆矾及水**配置的**波尔多液**可做**农药**使用
 
 ### 石灰石、生石灰、熟石灰之间的转化
 
