--- a/Geography Notes/J1 Geography Notes/3. 多样的地形.md
+++ b/Geography Notes/J1 Geography Notes/3. 多样的地形.md
@@ -15,9 +15,9 @@
 - *马来西亚半岛*北部与泰国接壤，南部隔柔佛海峡与新加坡对望，东临南中国海，西濒马六甲海峡与印尼的苏门答腊岛相隔
 - *砂拉越及沙巴*位于婆罗洲岛北部，西濒南中国海，东临苏拉威西海，南部与印尼的加里曼丹省接壤，与文莱毗邻（pílín）
 - 马来西亚地理位置的优越性
-  - 马来西亚**位于马六甲海峡的出入口**，是**太平洋和印度洋之间的交通要道**，也是**世界航海和航空运输的枢纽**
-  - 马来西亚**靠近赤道**，属于**热带国家**，适合**种植热带农作物**（油棕、橡胶、可可）
-  - 马来西亚**处于严重自然灾害范围以外**，既**没有地震，火山爆发**，也**没有台风**的灾害，是**生活和度假的好地方**
+  - 运输业：马来西亚**位于马六甲海峡的出入口**，是**太平洋和印度洋之间的交通要道**，也是**世界航海和航空运输的枢纽**，是各国商人交换商品的必经之地
+  - 气候：马来西亚**靠近赤道**，属于**热带国家**，适合**种植热带农作物**（油棕、橡胶、可可）
+  - 自然灾害：马来西亚**处于严重自然灾害范围以外**，既**没有地震，火山爆发**，也**没有台风**的灾害，是**生活和度假的好地方**
 
 
 ## 3.2 马来西亚的行政区
