--- a/Geography Notes/J1 Geography Notes/5. 青葱的森林.md
+++ b/Geography Notes/J1 Geography Notes/5. 青葱的森林.md
@@ -40,7 +40,7 @@
 
 #### 淡水沼泽林
 
-- 分布地区：**百乐湖岸，珍妮湖岸**
+- 分布地区：**百乐湖岸，珍尼湖岸**
 - 生长地区：**远离海岸，排水不良的湿地**
 - 代表植物：**亚答树**
 - 功能：**叶子可以用来盖房子**
@@ -63,7 +63,7 @@
    
    - **沿岸地区的木麻黄和沼泽红树林**也有防止水土流失
    
-   - [^水土流失]: 地表层富含养分的土壤因缺乏植被的保护而被流水冲走
+   - 树木被砍伐后，土地直接受热产生龟裂，雨水在裸露的地表流动造成土壤流失
    
 2. **调节空气成分**
    - 植物**光合作用**能将**二氧化碳转变为氧气**，供**动物及人类利用**
@@ -96,12 +96,12 @@
    - **禁止伐木**以**拯救和保存濒临绝种的生物**
    - 以**改善人类生态环境**、**促进科学研究、合理利用自然资源、发展生态旅游事业**
 3. **重植森林**
-   - 为了让森林得以保存，采取**选择性伐木**，**有计划地砍伐成年树木**及**翻种速生树种**
+   - 为了让森林得以保存，采取**选择性伐木**，***有计划地砍伐成年树木**及**翻种速生树种***
 4. **加强森林管理和研究工作**
    - 采用**可持续发展的森林管理计划**
    - **马来西亚森林研究所与国际森林管理组织合作**，**加强对森林生态环境的研究，改进森林规划与管理**
 5. **发展生态旅游**
    - **政府**积极**推动生态旅游**
-   - 让人们观赏森林之余，**增加生态保护意识**
+   - 让人们观赏森林之余，***增加生态保护意识***
    - 如：**姆鲁国家公园、大汉山国家公园等**
 
