--- a/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
+++ b/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
@@ -21,7 +21,7 @@
 - **土地资源面对的问题**
   - 可利用**土地有限且分布不均**
   - 人口激增造成**林地和草地大面积被开辟为耕地**以满足粮食需求
-  - 大批耕地被**开发成城市用地**
+  - 大批**耕地被开发成城市用地**
 
 ### 3.2.1 农业
 
@@ -73,7 +73,7 @@
 
 #### 个案：加拿大的小麦种植
 
-- ![加拿大的小麦种植](https://scontent.fkul13-1.fna.fbcdn.net/v/t1.15752-9/273540427_1091759258067604_3531311721064323624_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=ae9488&_nc_ohc=TJrc76TXT-UAX-7wq9X&_nc_ht=scontent.fkul13-1.fna&oh=03_AVJYQpO9ELoCkzxBRBMnPm_Ewew3mJuymmzzU99nES-zbQ&oe=623D4735)
+- ![加拿大的小麦种植]()
 - 主要**种植区**：**温尼伯、卡加立和埃特蒙敦**（三角地带）
 - **小麦中心：勒吉那**
 - 农业类型：**粗放式农业**
