--- a/Science Notes/J3 Science Notes/第七章 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/第七章 能量的转化与守恒.md
@@ -2,5 +2,46 @@
 
 ## 7.1 机械能与热能的相互转化
 
-### 7.1.1 机械能转化为热量
+### 7.1.1 机械能转化为热能
+
+#### 摩擦管实验
+
+![Diethyl ether](https://i.ibb.co/dMCSfKW/ethanol.png)
+
+- 拉动绳子时，绳子克服管壁的摩擦力做功，机械能转化为热能，使管壁热能增加，温度升高
+- 管内乙醚因受热而汽化，管内气压增大
+- 乙醚蒸气气压足够大时，推开塞子，乙醚蒸气对塞子做功，乙醚蒸气的热能转化为机械能
+- 乙醚蒸气热能减少，温度降低，重新液化，形成雾状气体
+
+#### 压缩气体做功
+
+![压缩气体做功](https://i.ibb.co/vBbVrbw/image.png)
+
+- 手压活塞时，手的机械能转化为内部气体的热能，热能增加，温度升高
+- 空气的热能转移到棉花上的乙醚，引燃了棉花
+
+#### 气体对外做功实验
+
+![气体对外做功实验](https://i.ibb.co/ZX6TBFn/image.png)
+
+- 向瓶内打气，热能上升，温度上升，酒精汽化
+- 压缩气体对瓶塞做功，气体热能降低
+- 瓶内热能减少，温度降低，水蒸气和酒精蒸气液化成小水滴，出现白雾
+
+#### 瓶口的白雾
+
+- 汽水装入瓶时压入许多二氧化碳气体，瓶内的压强大于外界大气压
+- 打开瓶盖时这些气体快速膨胀，对外做功，气体热能转化为机械能
+- 温度迅速下降，瓶口*附近水蒸气*液化成小液滴，不是瓶内冒出来的白雾
+
+#### 间歇泉
+
+- 地下的岩浆将热能*转移*给周围地层的水，使一部分水变成水蒸气，压强增大
+- 水蒸气压强足够大时，就会穿过底层裂缝冲出地面形成喷泉，水蒸气的部分热能转化成水和水蒸气的机械能
+
+#### 汽油机
+
+![汽油机](https://i.ibb.co/p3CVRhy/image.png)
+
+- 
 
