--- a/Science Notes/J3 Science Notes/第七章 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/第七章 能量的转化与守恒.md
@@ -8,7 +8,7 @@
 
 ![Diethyl ether](https://i.ibb.co/dMCSfKW/ethanol.png)
 
-- 拉动绳子时，绳子克服管壁的摩擦力做功，机械能转化为热能，使管壁热能增加，温度升高
+- 拉动绳子时，绳子克服管壁的摩擦力做功，***机械能转化为热能***，使管壁热能增加，温度升高
 - 管内乙醚因受热而汽化，管内气压增大
 - 乙醚蒸气气压足够大时，推开塞子，乙醚蒸气对塞子做功，乙醚蒸气的热能转化为机械能
 - 乙醚蒸气热能减少，温度降低，重新液化，形成雾状气体
@@ -19,6 +19,7 @@
 
 - 手压活塞时，手的机械能转化为内部气体的热能，热能增加，温度升高
 - 空气的热能转移到棉花上的乙醚，引燃了棉花
+- 机械能 → 热能
 
 #### 气体对外做功实验
 
@@ -27,21 +28,83 @@
 - 向瓶内打气，热能上升，温度上升，酒精汽化
 - 压缩气体对瓶塞做功，气体热能降低
 - 瓶内热能减少，温度降低，水蒸气和酒精蒸气液化成小水滴，出现白雾
+- 机械能 → 热能 → 机械能
 
 #### 瓶口的白雾
 
 - 汽水装入瓶时压入许多二氧化碳气体，瓶内的压强大于外界大气压
-- 打开瓶盖时这些气体快速膨胀，对外做功，气体热能转化为机械能
+- 打开瓶盖时这些气体快速膨胀，对外做功，气体***热能转化为机械能***
 - 温度迅速下降，瓶口*附近水蒸气*液化成小液滴，不是瓶内冒出来的白雾
 
 #### 间歇泉
 
 - 地下的岩浆将热能*转移*给周围地层的水，使一部分水变成水蒸气，压强增大
-- 水蒸气压强足够大时，就会穿过底层裂缝冲出地面形成喷泉，水蒸气的部分热能转化成水和水蒸气的机械能
+- 水蒸气压强足够大时，就会穿过底层裂缝冲出地面形成喷泉，水蒸气的部分***热能转化成水和水蒸气的机械能***
 
 #### 汽油机
 
 ![汽油机](https://i.ibb.co/p3CVRhy/image.png)
 
-- 
+- 气缸内的小规模爆炸对活塞做功，带动活塞运动
+- 化学能 → 热能 → 动能
 
+#### 火箭
+
+- 燃料产生的高温高压的燃气推动火箭向前运动
+- 热能 → 机械能
+
+#### 飞机空调
+
+- 飞机在高空飞行时，舱外气压大于舱内气压，需用空气压缩机把空气从舱外压进舱内
+- 在压缩过程中，空气压缩机对空气做工，空气热能大幅增加
+- 飞机的空调系统需先对这些热空气进行制冷再引入舱内
+- 机械能 → 热能
+
+### 小总结
+
+|        | 做功                   | 热传递                         |
+| ------ | ---------------------- | ------------------------------ |
+| 不同点 | 机械能与热能的相互转化 | 热能在不同的物体之间发生了转移 |
+
+- **热传递和做功**两种改变物体热能的方法，对于改变物体热能是**等效**的。
+- 若一个物体不吸热，不放热，并不代表该物体温度不变
+  - 改变物体温度有两个途径：做功和热传递
+  - 不吸热不放热只说明了没有热传递
+  - 若物体对外做功，热能减小，温度降低
+  - 若物体接受外力做功，热能增大，温度升高
+
+## 7.2 电能转化为热能
+
+- 电流的热效应：电流通过导体时，使导体温度升高【电能 → 热能】
+- **电热器**：**利用电流的热效应工作**
+
+### 7.2.2 电热的相关因素
+
+- **电流越大，电阻越大，通电时间越长，产生的电热就越多**
+- Q ∝ IRt
+- 影响电阻的因素
+  - 横截面积、材质、长度
+  - 横截面积越小，长度越长，电阻就越大
+- 安装灯泡的支路所用的导线会比安装空调的支路的导线细
+  - 灯泡工作时，通过的电流较小，而空调工作时通过的电流较大
+  - 为了不使导线过热，通过电流较大的支路导线的电阻应当小些，所以安裝空调的支路所用的导线要粗些以减少电阻
+
+## 7.3 能量转化与守恒定律
+
+- **能量既不会消灭，也无法被创造**
+- 能量会从一种形式*转化*为另一种形式，或者从一个物体*转移*到另一个物体。而**能量总量在转化和转移的过程中保持不变**
+
+### 永动机
+
+- 永动机：不需要消耗燃料，不需要外界提供动力，就可源源不断地对外做功
+- ***不可能会实现***，证明了能量在转化过程中总量是守恒的
+- 例：亨内考的魔轮
+
+### 抽水蓄能电站
+
+![抽水蓄能电站](https://i.ibb.co/2twNYvg/image.png)
+
+- 白天人们用电量较多，晚上人们用电量较少
+- 抽水蓄能电站安装**两用机组**，即可**抽水**也可**发电**
+- 电低谷时段，机组作抽水机用，利用多余的电能将下水库的水抽到上水库中
+- 电高峰时段，上水库放水，机组作发电机用，将上水库的水的机械能转化为电能
