--- a/Science Notes/J3 Science Notes/第八章 食物与营养.md
+++ b/Science Notes/J3 Science Notes/第八章 食物与营养.md
@@ -2,9 +2,96 @@
 
 ## 8.1 食物中的营养物质
 
-### 8.1.1 食物中的营养物质
+### 8.1.1 食物中的营养成分
 
+#### 检测
 
+|  营养成分  |        试剂         |     现象     |
+| :--------: | :-----------------: | :----------: |
+| 还原糖[^1] |      斐林试剂       |  砖红色沉淀  |
+|   蛋白质   |     双缩脲试剂      |     紫色     |
+|    脂肪    |     苏丹III溶液     |    橘黄色    |
+|  维生素C   | 吲哚酚试剂/高锰酸钾 | 逐渐变为无色 |
 
-马来西亚卫生部为了减少甲状腺肿张和
+[^1]: 葡萄糖、果糖、麦芽糖等
 
+- 食物中主要的营养成分：水、无机盐、糖类、脂肪、蛋白质、维生素
+- 无机物：水、无机盐
+- 有机物：糖类、脂肪、蛋白质、维生素
+
+### 8.1.2 食物与能量
+
+- 糖类、脂肪、蛋白质能通过氧化作用为人体提供能量
+- 1g蛋白质/糖类氧化能释放出16.8kJ的热量
+- 同质量脂肪能释放出38kJ的热量
+- 每个人所需的能量会受年龄和日常活动的激烈程度影响
+  - 儿童和少年成长迅速，需要较多能量
+  - 打乒乓球时所消耗的能量是书写时所消耗的能量的11倍
+
+### 8.1.3 营养素的作用
+
+- 营养素的生理功能
+  - 构成细胞组织
+  - 供给人体生长发育和组织器官自我更新所需的材料
+  - 调节人体的生理活动
+  - 提供能量
+
+- 马来西亚卫生部为了减少甲状腺肿大和贫血问题，要求工厂在食盐内加碘，在面粉内加铁
+
+#### 水
+
+- 构成细胞的主要成分
+- 生物化学反应只能在水溶液中才能进行
+- 体内的养分和废物都必须溶解在水中才能进行运输
+
+#### 无机盐
+
+- 矿物质：钙、铁、碘、钠、磷等
+- 不能提供能量
+- 保证人体维持正常生理活动
+
+| 缺乏的矿物质 |             症状             |
+| :----------: | :--------------------------: |
+|     缺碘     |   甲状腺肿大、儿童智力低下   |
+|     缺钙     | 少儿：佝偻病、成人：骨质疏松 |
+|     缺锌     |  儿童味蕾功能下降，食欲减弱  |
+
+#### 糖类
+
+- 人体所需能量的主要来源
+- 包括淀粉、葡萄糖、蔗糖、麦芽糖等
+
+#### 蛋白质
+
+- 组成细胞结构的主要物质
+- 占人体细胞干重[^2]的一半以上
+- 为人体的生命活动提供能量
+- 青少年对蛋白质的需求量较大
+
+[^2]: 细胞去除水分后的净重量
+
+#### 脂肪
+
+- 人体内贮藏能量的主要物质
+- 人体内糖类分解不足以提供人体所需的能量时就会分解体内储存的脂肪以提供能量
+
+##### 熊的冬眠
+
+- 熊在冬眠后会消瘦很多是因为熊是恒温动物，在冬眠状态下仍需不断消耗能量，维持体温
+
+#### 维生素
+
+- 包括维生素A、B、C、D、E、K等
+- 不提供能量、但参与人体内许多重要的生理活动，对保持身体健康作用很大
+- 人体内只可合成维生素D，其余维生素都需从食物中获得
+
+#### 纤维素
+
+- 不能被人体消化吸收
+- 刺激消化腺分泌消化液，促进肠道的蠕动，利于及时排便
+- 降低大肠癌的发病率，减少肠道吸收脂肪，预防心血管疾病
+- 主要来自植物性食物
+
+## 8.2 营养与健康
+
+- 
