--- a/Science Notes/J3 Science Notes/第八章 食物与营养.md
+++ b/Science Notes/J3 Science Notes/第八章 食物与营养.md
@@ -94,4 +94,71 @@
 
 ## 8.2 营养与健康
 
-- 
+### 8.2.2 营养失衡
+
+- 营养失衡：人体摄入的食物中所含的**营养素和能量过多或过少**
+
+- 肥胖症：体内脂肪过多
+
+  - 机体摄入能量超过机体消耗的能量，过多的能量会以脂肪的形式储存在皮下组织
+
+- 营养不良
+
+  - 消瘦型：能量供应不足
+  - 浮肿型：蛋白质供应不足
+  - 消瘦—浮肿型：介于两者之间
+
+- 缺乏维生素引起的疾病
+
+  - | 维生素的种类 |             缺乏时的症状             |
+    | :----------: | :----------------------------------: |
+    |   维生素A    |      皮肤干燥、夜盲症、干眼症等      |
+    |  维生素B~1~  | 神经炎、脚气病、消化不良、食欲不振等 |
+    |   维生素C    |         坏血病、抵抗力下降等         |
+    |   维生素D    |         佝偻病、骨质疏松症等         |
+
+## 8.3 均衡饮食
+
+### 8.3.1 食物金字塔
+
+- 食物金字塔反映各类食物在膳食中的地位和应占的比例
+
+### 8.3.2 饮食习惯与饮食结构
+
+- 营养失调：营养不良 & 营养过剩
+- 成因：不良的饮食习惯和不合理的饮食结构
+
+#### 不良的饮食习惯
+
+- 不吃早餐会感到精神不振，并容易引发胃炎、胆结石等消化系统疾病
+- 我们应养成定时定量进食的习惯
+- 一日三餐中早餐要吃得丰富，午餐要吃得较饱，晚餐则吃的比较清淡、少量
+- 早、晚餐各占30%，午餐占40%为宜
+
+#### 不合理的饮食结构
+
+- 偏食：只喜欢吃某几种食物的不良习惯
+- 挑食：支持自己喜爱的食物而排斥其他的事物
+- 偏食、挑食等不良饮食习惯都会导致营养不良进而引起疾病如缺铁性贫血等
+
+## 8.4 关注食品安全
+
+- 食品安全问题
+  1. 由细菌及其毒素污染引起的食品腐败变质问题
+  2. 农药、有毒化学药品和激素等引起的污染问题
+  3. 新型食品中的安全问题
+     - 转基因食品：具产量高等优点但有可能危害健康
+     - 强化食品：如鲜奶加钙、或补品
+     - 纯净水：缺矿物质或无机盐等
+- 购买食品时应注意的标签内容
+  - 出厂日期和保质期
+  - 生产许可证批号
+  - 生产产家
+  - 添加剂成分
+- 购买食品时应注意
+  - 察看食品颜色是否正常
+  - 不是有含有有毒成分的动植物
+    - 河豚、发芽的马铃薯、受黄曲霉污染的大米、花生
+  - 避免盲目使用强化食品
+    - 过度“强化”会适得其反
+      - 碘是人体必要的元素，但过度补碘会引起碘中毒
