can i just enjoy my weeked;-; ow nope

--- a/Science Notes/J3 Science Notes/8 食物与营养.md
+++ b/Science Notes/J3 Science Notes/8 食物与营养.md
@@ -9,11 +9,13 @@
 |  营养成分  |        试剂         |     现象     |
 | :--------: | :-----------------: | :----------: |
 | 还原糖[^1] |      斐林试剂       |  砖红色沉淀  |
+|  多糖[^2]  |        碘液         |    深蓝色    |
 |   蛋白质   |     双缩脲试剂      |     紫色     |
 |    脂肪    |     苏丹III溶液     |    橘黄色    |
 |  维生素C   | 吲哚酚试剂/高锰酸钾 | 逐渐变为无色 |
 
 [^1]: 葡萄糖、果糖、麦芽糖等
+[^2]: 淀粉、蔗糖等
 
 - 食物中主要的营养成分：水、无机盐、糖类、脂肪、蛋白质、维生素
 - 无机物：水、无机盐
@@ -21,8 +23,9 @@
 
 ### 8.1.2 食物与能量
 
-- 糖类、脂肪、蛋白质能通过氧化作用为人体提供能量
-- 1g蛋白质/糖类氧化能释放出16.8kJ的热量
+- 人体通过**氧化作用释放能量**
+- **糖类、脂肪、蛋白质**能通过**氧化作用**为人体**提供能量**
+- **1g蛋白质/糖类**氧化能释放出**16.8kJ**的热量
 - 同质量脂肪能释放出38kJ的热量
 - 每个人所需的能量会受年龄和日常活动的激烈程度影响
   - 儿童和少年成长迅速，需要较多能量
@@ -48,27 +51,31 @@
 
 - 矿物质：钙、铁、碘、钠、磷等
 - 不能提供能量
-- 保证人体维持正常生理活动
+- 保证**人体维持正常生理活动**
+- 大多数的无机盐以离子形式存在人体中
 
-| 缺乏的矿物质 |             症状             |
-| :----------: | :--------------------------: |
-|     缺碘     |   甲状腺肿大、儿童智力低下   |
-|     缺钙     | 少儿：佝偻病、成人：骨质疏松 |
-|     缺锌     |  儿童味蕾功能下降，食欲减弱  |
+| 缺乏的矿物质 |                    症状                    |
+| :----------: | :----------------------------------------: |
+|     缺碘     | 成人：甲状腺肿大、儿童：呆小症（智力低下） |
+|     缺钙     |        少儿：佝偻病、成人：骨质疏松        |
+|     缺锌     |         儿童味蕾功能下降，食欲减弱         |
+|     缺铁     |                    贫血                    |
 
-#### 糖类
+糖类
 
 - 人体所需能量的主要来源
+- 又称碳水化合物
 - 包括淀粉、葡萄糖、蔗糖、麦芽糖等
+- 在大米﹑小麦﹑马铃薯和玉米等中含量最高
 
 #### 蛋白质
 
 - 组成细胞结构的主要物质
-- 占人体细胞干重[^2]的一半以上
+- 占人体细胞干重[^3]的一半以上
 - 为人体的生命活动提供能量
 - 青少年对蛋白质的需求量较大
 
-[^2]: 细胞去除水分后的净重量
+[^3]: 细胞去除水分后的净重量
 
 #### 脂肪
 
@@ -84,11 +91,14 @@
 - 包括维生素A、B、C、D、E、K等
 - 不提供能量、但参与人体内许多重要的生理活动，对保持身体健康作用很大
 - 人体内只可合成维生素D，其余维生素都需从食物中获得
+- | 水溶性维生素 | 脂溶性维生素 |
+  | :----------: | :----------: |
+  |     B、C     |  A、D、E、K  |
 
 #### 纤维素
 
-- 不能被人体消化吸收
-- 刺激消化腺分泌消化液，促进肠道的蠕动，利于及时排便
+- **不能被人体消化吸收**
+- 刺激消化腺分泌消化液，**促进肠道的蠕动**，利于及时排便
 - 降低大肠癌的发病率，减少肠道吸收脂肪，预防心血管疾病
 - 主要来自植物性食物
 
@@ -114,8 +124,9 @@
     | :----------: | :----------------------------------: |
     |   维生素A    |      皮肤干燥、夜盲症、干眼症等      |
     |  维生素B~1~  | 神经炎、脚气病、消化不良、食欲不振等 |
-    |   维生素C    |         坏血病、抵抗力下降等         |
+    |   维生素C    |    坏血病、抵抗力下降等、牙龈出血    |
     |   维生素D    |         佝偻病、骨质疏松症等         |
+    |   维生素E    |    幼儿：溶血性贫血、成人：不孕症    |
 
 ## 8.3 均衡饮食
 
