--- a/Science Notes/J3 Science Notes/9 消化与吸收.md
+++ b/Science Notes/J3 Science Notes/9 消化与吸收.md
@@ -19,29 +19,29 @@
 
 #### 消化腺
 
-- 分泌各种**消化液**，属外分泌腺（通过导管排出）
-  - 细胞将其合成的物质释放出来的过程叫做分泌，具有分泌功能的细胞组成的组织或器官叫做腺体
-  - 内分泌腺：通过血液循环将被分泌物送到全身
-  - 外分泌腺：通过导管排出
+- 分泌各种**消化液**，属*外分泌腺*（通过**导管**排出）
+  - **细胞**将其**合成的物质释放**出来的过程叫做**分泌**，**具有分泌功能的细胞组成的组织或器官**叫做**腺体**
+  - **内分泌腺**：通过**血液循环**将被分泌物送到全身
+  - **外分泌腺**：通过**导管排出**
 - **化学性消化**：消化液中的**消化酶**能把食物中**的淀粉、蛋白质和脂肪分解**
 
-| 消化腺       | 唾液腺 | 胃腺 | 肠腺 | 肝脏       | 胰腺 |
-| ------------ | ------ | ---- | ---- | ---------- | ---- |
-| 分泌的消化液 | 唾液   | 胃液 | 肠液 | 胆汁       | 胰液 |
-| 流入的部位   | 口腔   | 胃   | 小肠 | 小肠或胆囊 | 小肠 |
+|    消化腺    | 唾液腺 | 胃腺 | 肠腺 |    肝脏    | 胰腺 |
+| :----------: | :----: | :--: | :--: | :--------: | :--: |
+| 分泌的消化液 |  唾液  | 胃液 | 肠液 |    胆汁    | 胰液 |
+|  流入的部位  |  口腔  |  胃  | 小肠 | 小肠或胆囊 | 小肠 |
 
 ### 9.1.2 牙齿与摄食
 
 - 食物的消化从口腔开始
 - 口腔里有**牙齿**、**舌**和**唾液腺**
 - 口腔内有**三对唾液腺**
-- 乳牙有20颗；恒牙总共有32颗，其中有12颗是臼齿
+- **乳牙**有20颗；**恒牙**总共有32颗，其中有12颗是臼齿
 
 ![teeth](https://i.ibb.co/bBCRfbL/teeth.png)
 
-- 门齿：切断食物
-- 犬齿：撕裂食物
-- 前臼齿：协助犬齿和臼齿
+- **门齿**：切断食物
+- **犬齿**：撕裂食物
+- **前臼齿**：协助犬齿和臼齿
 - 臼齿：磨碎食物                      
 
 #### 牙齿的结构
@@ -71,7 +71,7 @@
   - 小肠壁上有能**分泌多种消化液**的**肠腺**
   - 肠壁的**平滑肌层**能使**小肠蠕动**
   - ![肝脏胆囊胰腺](https://i.ibb.co/wM85tVq/image.png)
-  - 肝脏分泌的胆汁和胰腺分泌的胰液通过十二指肠内的胆总管和胰管的开口进入十二指肠
+  - 肝脏分泌的**胆汁**和胰腺分泌的**胰液**通过**十二指肠内的胆总管和胰管**的开口进入十二指肠
   - 小肠的末端与大肠相连
     - 大肠，分为盲肠、阑尾、结肠、直肠和肛门
     - 大肠的起始段是阑尾
@@ -84,15 +84,15 @@
 - **酶**(酵素)是由活细胞产生的**具有催化能力的有机物**，大多数是**蛋白质**
 - **消化腺分泌消化液**，消化液中含有**消化酶**，**促进消化道中的食物分解**
 - 如：**唾液淀粉酶**【将淀粉分解成麦芽糖】、胰淀粉酶、胰脂肪酶、胰蛋白酶
-- 酶是生物催化剂，具有高效性，只需微量就可参与反应，使人体细胞内的各种反应迅速进行，保证各项生命活动的正常进行
-- 酶具有专一性，一种酶只能催化某一种或一类化学反应
-- 酶的催化作用会受到温度、酸碱度等外界因素影响
+- **酶**是**生物催化剂**，具有高效性，只需**微量就可参与反应**，使人体细胞内的各种**反应迅速进行**，保证各项生命活动的正常进行
+- 酶具有**专一性**，一种酶只能催化某一种或一类化学反应
+- **酶的催化作用**会受**到温度、酸碱度等外界因素影响**
   - 唾液淀粉酶在pH 6.6 - 7.1 的环境活性最强
   - 胃蛋白酶在pH 0.9 - 1.5 的胃液中活性最强
 
 ### 9.2.2 食物的消化
 
-- 食物中的大分子物质需经过消化才能被人体吸收利用
+- 食物中的**大分子物质需经过消**化才能被人体吸收利用
 - **消化**：人体在消化道中**将食物分解成能被身体利用的小分子化合物**的过程
 - 分为**化学性消化、物理性消化**两种类型，消化过程中这两种消化方式**相互配合，同时进行**
 - 食物的消化在**口腔、胃、小肠**中进行，在各种消化酶的作用下：
@@ -100,26 +100,67 @@
   - 食物入口，经过**牙齿咀嚼**，舌把食物和唾液搅拌混合成**食团**，此过程属于**物理性消化**。口腔周围的**三对唾液腺**分泌的**唾液**沿导管输入口腔。唾液中的**唾液淀粉酶**促使**少量淀粉分解成麦芽糖**，入口的**淀粉类食物就会变甜**，此过程属于**化学性消化**。
   - 在口腔形成的食团经过**咽**进入管状的**食道**，**食道肌的收缩与舒张**引起食道蠕动**将食团输送到胃**
   - 胃呈囊状，胃壁的肌肉很发达，可以有力地收缩
-  - 胃壁内的**胃腺**能分泌**含有胃蛋白酶的胃液**，有助于胃蛋白酶**分解食物中的蛋白质**
+  - 胃壁内的**胃腺**能分泌**含有胃蛋白酶的胃液**[^胃液]，有助于胃蛋白酶**分解食物中的蛋白质**
   - 胃液具有**杀菌、消化、保护胃壁**的作用
   - 胃的蠕动将**食物与胃液**混合成粥状的**食糜**，食糜借助胃的蠕动被推入小肠
   - 小肠壁上的**肠腺**所分泌的**肠液**直接流入小肠腔内
   - **肝脏**是**人体最大的消化腺**，分泌的**胆汁**流入**胆囊储存**
-  - **胆汁和胰液**分别经胆总管和胰管流入**十二指肠**
+  - **胆汁和胰液**分别经**胆总管和胰管**流入**十二指肠**
   - **胰液和肠液**里含有消化淀粉、麦芽糖、蛋白质、脂肪等**多种营养物质的消化酶**
-  - **胆汁不含消化酶**，它能促进**脂肪变成微小的颗粒**，增加与胰液和肠液中的脂肪酶的接触，**加速脂肪的消化**
+  - **胆汁*不含消化酶***，它能促进**脂肪变成微小的颗粒**，增加与胰液和肠液中的脂肪酶的接触，**加速脂肪的消化**
   - ![食物分解的分子式](https://i.ibb.co/RCQ7sj8/image.png)
-  - 食物残渣、部分水和无机盐等借助小肠的蠕动被推入大肠
-  - 大肠是消化道的最后一段，起始段是阑尾
-  - 食物残渣或者肠内寄生虫落入其中易引起阑尾炎
-  - 大肠能蠕动，但没有消化功能
-  - 大厂吸收食物中的一部分水分使之形成粪便
-  - 粪便通过大肠末端的肛门排出
+  - **食物残渣、部分水和无机盐**等借助小肠的蠕动被推入**大肠**
+  - 大肠是消化道的最后一段，**起始段是阑尾**
+  - 食物残渣或者肠内寄生虫落入其中易引起**阑尾炎**
+  - 大肠能蠕动，但**没有消化功能**
+  - 大肠**吸收食物中的一部分水分**使之**形成粪便**
+  - **粪便**通过大肠末端的**肛门排出**
 
 ## 9.3 营养物质的吸收
 
 ### 9.3.1 营养物质的吸收
 
-![小肠结构](https://i.ibb.co/PWVVtrT/image.png)
+- 营养物质的吸收：**食物中**的**水、无机盐、维生素**及消化后形成的**小分子营养物质**，如**葡萄糖、氨基酸、甘油、脂肪酸**等，**通过消化道上皮细胞进入血液和淋巴的过程**
 
-- 
+- 胃、小肠、大肠具有吸收功能
+
+- 小肠是消化和吸收的主要器官
+
+- 吸收功能表
+
+  - |   消化道   |                           吸收功能                           |
+    | :--------: | :----------------------------------------------------------: |
+    | 口腔、食道 |                       基本没有吸收功能                       |
+    |     胃     |                吸收少量的**水、无机盐和酒精**                |
+    |    小肠    | 吸收**葡萄糖、氨基酸、甘油、脂肪酸**及大部分**水、无机盐和维生素** |
+    |    大肠    |             吸收少量的**水、无机盐和部分维生素**             |
+
+#### 小肠的吸收
+
+- ![小肠结构](https://i.ibb.co/PWVVtrT/image.png)
+- 小肠内表面的环形皱*襞*和皱襞表面突起的小肠绒毛使小肠内表面积增大
+- 小肠绒毛内分布着毛细血管和毛细淋巴管
+  - 毛细血管：吸收水溶性营养物质：葡萄糖、氨基酸、无机盐、水、维生素B、
+  - 毛细淋巴管：吸收脂溶性营养物质：甘油、脂肪酸、维生素A、D、E、K
+- 小肠绒毛壁、毛细血管壁、毛细淋巴管壁都很薄，仅由一层上皮细胞构成，使营养物质容易被吸收进血液和淋巴
+
+##### 小肠适合消化和吸收的结构特点
+
+- 小肠内有**多种消化酶**促进食物的消化
+- 小肠很**长**，**具环形皱襞和小肠绒毛**，增加了**吸收面积**
+- 小肠绒毛内具有丰富的**毛细血管和毛细淋巴管**，适于**物质吸收**
+- 小肠绒毛**只有一层上皮细胞**
+
+### 9.3.2 排遗与便秘
+
+- 大肠：储存食物残渣、形成粪便的器官
+- 排遗：将不能消化的食物残渣排出体外的过程
+- 便秘：粪便在大肠内存留时间过长，变得干硬而不易排出
+  - 症状：排便次数减少、粪便量减少、粪便干燥、排便费力等
+  - 成因：饮水不足、肠道有益菌不足、饮食中国缺少膳食纤维、久坐不动、排便习惯不佳、过度劳累、精神紧张等
+  - 预防：积极参加体育运动、多吃蔬菜和水果等富含纤维素的食物、多喝水、养成定时排便的习惯
+
+[^胃液]: 透明、淡黄色的酸性液体，**pH为0.9～1.5**。成分组成：胃酸、胃蛋白酶、粘液、内因子
+
+nice shit: [食物在人体内的消化吸收全过程 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/21452303)
+
