--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -89,9 +89,24 @@
 
 ## 10.2 血管和心脏
 
+- **心脏和血管**构成了**人体血液循环的管道**
+
 ### 10.2.1 血液流动的管道——血管
 
-- 
+- ![三种血管的关系](https://i.ibb.co/FwLrkrr/image.png)
+
+- 血管分为**动脉、静脉和毛细血管**三种
+
+- |      |              动脉              |                             静脉                             |                           毛细血管                           |
+  | ---- | :----------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+  | 功能 |   把血液送到全身各器官的血管   |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
+  | 特征 | 管壁厚、弹性大、管内血流速度快 | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
+  |      |   颈部：颈动脉；腕部：桡动脉   |                    皮肤下的“青筋”就是静脉                    |               连接在细小的动脉和静脉之间的血管               |
+  
+
+## 10.2.2 血液运输的动力器官——心脏
+
+
 
 [^抗凝剂]: 如：柠檬酸钠，防止血液凝固
 [^废料]: 如：尿素、尿酸等等
