--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -40,6 +40,8 @@
 
   - 红细胞大约六十天会更新一半
 
+- 显微镜下的视野中最容易观察到的细胞：红细胞
+
 - 骨内的**红脊髓**具有造血功能，能**产生新的血细胞**
 
 - 血细胞含量受影响的一些因素
@@ -97,17 +99,194 @@
 
 - 血管分为**动脉、静脉和毛细血管**三种
 
-- |      |              动脉              |                             静脉                             |                           毛细血管                           |
-  | ---- | :----------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-  | 功能 |   把血液送到全身各器官的血管   |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
-  | 特征 | 管壁厚、弹性大、管内血流速度快 | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
-  |      |   颈部：颈动脉；腕部：桡动脉   |                    皮肤下的“青筋”就是静脉                    |               连接在细小的动脉和静脉之间的血管               |
+- |      |               动脉               |                             静脉                             |                           毛细血管                           |
+  | ---- | :------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+  | 功能 |    把血液送到全身各器官的血管    |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
+  | 特征 |  管壁厚、弹性大、管内血流速度快  | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
+  |      | 颈部：颈动脉；腕部：桡 (ráo)动脉 |                    皮肤下的“青筋”就是静脉                    |               连接在细小的动脉和静脉之间的血管               |
   
 
-## 10.2.2 血液运输的动力器官——心脏
+### 10.2.2 血液运输的动力器官——心脏
 
+- **血液流动的动力**来自**心脏**
+- 通过心肌**不断地收缩和舒张**，推动**血液**在**心脏和血液**中**沿固定的方向不间断地流动**
+- 心脏位于**胸部的中部偏左下方**，大小和**拳头**差不多
+- ![心脏结构](https://i.ibb.co/3MDYTQB/image.png)
+- 心脏内部的四个腔：**左心房、左心室**、**右心房、右心室**
+- **同侧的心房和心室相通**，左右心房和左右心室互相隔开
+- 主动脉管壁比肺动脉管壁厚
+- **心室与动脉**相连，**心房与静脉**相连
+  - **左心室连主动脉**，**左心房连肺静脉**
+  - **右心室连肺动脉**，**右心房连上下腔静脉**
+- **心房和心室**之间及**心室和动脉**之间有**瓣膜**以**控制血液向一个方向流动**
 
+- ![心脏内部血流方向](https://i.ibb.co/7C3bFtq/image.png)
+- 当左右**心房收缩**，左右**心室舒张**时
+  - **心房的血液进入心室**
+  - 心房和心室之间的**房室瓣**会**防止血液倒流回心房**
+- 当左右**心室收缩**，左右**心房舒张**时
+  - **左心室**会把**血液压入主动脉**输送到**全身**
+  - **右心室**会把**血液压入肺动脉**送往**肺部**
+- **心脏的搏动**推动着**血液流动**，是**血液运输的动力器官**
+  - 颈动脉和桡动脉的搏动与心脏的跳动有关，**心脏每跳动一次，颈动脉和桡动脉就相应的搏动一次**
+
+### 10.2.3 心脏和血管的保护
+
+- **心血管疾病**是一系列合计循环系统的疾病，如：动脉硬化、冠心病、脑血栓、脑溢血
+- 原因：日常生活、饮食习惯、精神状态
+  - 长期精神紧张
+  - 食物中脂肪过多
+  - 嗜烟
+  - 嗜酒
+  - 缺乏体育运动
+
+#### 动脉硬化
+
+- 血液中**脂肪类物质在动脉壁上沉积**引起的
+- 使**动脉壁增厚，弹性降低，管腔狭窄**
+- 血液中低密度脂蛋白[^低密度脂蛋白]和总胆固醇水平高的人容易发生动脉硬化
+
+#### 冠心病
+
+- **心肌运动**需要**能量**，**冠状动脉供应**心脏本身营养需要的动脉
+- **冠心病**：**冠状动脉发生病变**，如动脉硬化、管腔变窄、导致心肌缺血
+- **冠心病严重**时会引起**心绞痛**甚至发生**心肌梗死**
+- 若**冠状动脉被阻断**，**心跳**很快就会**停止**
+
+#### 中风
+
+- 中风：**脑动脉硬化**导致动脉栓塞或血管破裂引发的**脑溢血**
+- 中风症状
+  - 猝然昏倒、不省人事
+  - 口角歪斜、语言不利
+  - 半生不遂
+- **中风**同**冠心病、癌症**并列为**威胁人类健康的三大疾病**
+  - 中风发病率高、死亡率高、致残率高、复发率高、并发症多
+
+### 生活习惯对心血管健康的影响
+
+- 经常参加体育锻炼的人
+  - 心肌发达，心脏搏动有力，动脉口径会增大，管壁的弹性得到改善
+  - 每搏输出量增大，只要较少的心脏搏动次数就能达到一般人的每分钟输出量，心跳速率也就比一般人慢
+- 心脏较弱的人
+  - 需加快心跳速率以提高心脏的每分钟输出量
+  - 心肌无法得到充分休息，容易疲劳，因此不能坚持长时间的剧烈运动
+
+## 10.3 血液循环
+
+- **人的循环系统**分为**血液循环系统**和**淋巴循环系统**
+- **血液循环系统**：**血液**、**血管**和**心脏**组成
+- 血液循环：心脏跳动促使血液在心脏和全部血管所组成的管道中沿固定方向循环流动
+
+#### 10.3.1 体循环和肺循环
+
+- 人体血液循环：可分为**体循环**和**肺循环**
+- 体循环
+  - 左心室 ——> 主动脉 ——> 各级动脉 ——> 毛细血管 ——> 各级静脉 ——> 上下腔静脉 ——> 右心房
+  - 血液通过毛细血管网和身体的各部分的组织细胞进行物质交换
+    - 把运来的氧气和废料供给细胞利用，同时把细胞产生的二氧化碳等废物运走
+  - 从左心室射出的鲜红色充氧血，经过体循环变成暗红色的缺氧血
+    - 充氧血：含氧量较多的血液，呈鲜红色
+    - 缺氧血：含氧量较少的血液，呈暗红色
+- 肺循环
+  - 右心室 ——> 肺动脉 ——> 肺毛细血管 ——> 肺静脉 ——> 左心房
+  - 血液在肺部毛细血管网进行气体交换
+    - 血液排出二氧化碳获得氧气
+  - 从右心室射出的暗红色缺氧血，经过肺循环变成鲜红色的充氧血
+  - 由于血液经过肺部毛细血管时压力已经很低，假如不回流心脏加压，直接流向身体其他部分是很难的，这会造成组织细胞得不到氧气和营养物质的补充
+- 血液循环的功能
+  - 不断地将氧气、营养物质和激素等运送到全身各个组织器官
+  - 将组织器官产生的二氧化碳和其他代谢废物运送到肾脏等排泄器官以排出体外
+  - 保证机体各项生理活动的正常进行
+
+### 10.3.2 心率、脉搏和血压
+
+#### **心率**
+
+- **心脏每分钟跳动的次数**
+- 健康成年人安静时心率约为**每分钟75次**
+
+#### **脉搏**
+
+- 体表可触摸到的动脉搏动
+- **心脏**每次**收缩**都会**产生很大的压力**，这个**压力会沿着动脉向前推进血液**，使**所有动脉都受到压力**
+- **脉搏和心率是相同的**
+- **中医**在诊断时会根据**腕部桡动脉**的脉相来诊断疾病
+  - **脉相**：脉搏的快慢、强弱、深浅的情况
+
+#### **血压**
+
+- 血液在血管内向前流动时对血管壁产生的压强
+- 血压是不断变化的
+- 收缩压：心脏收缩时动脉血液达到的最高值
+- 舒张压：心脏舒张时动脉血液达到的最低值
+- 血压一般以分式表示
+  - 120/80 mmHg 
+    - 收缩压：120 mmHg
+    - 舒张压：80 mmHg
+
+## 10.4 淋巴循环
+
+- 淋巴循环是血液循环的辅助部分
+
+### 10.4.1 淋巴系统的组成
+
+- **淋巴系统**包括**淋巴、淋巴管和淋巴器官**
+- **淋巴**：**无色透明的液体**，内含**淋巴细胞**
+- **淋巴管**：**淋巴运行的管道**
+  - **毛细淋巴管**：淋巴管道的**起始段**
+    - **小肠绒毛**内有许多毛细淋巴管
+  - **毛细淋巴管 ——> 各级淋巴管 ——> 淋巴总管 ——> 静脉**
+
+#### 淋巴器官
+
+##### 脾
+
+- 位于腹腔左上方、呈紫红色，扁圆形
+- 体内最大的淋巴器官
+- 有破坏衰老血细胞的作用
+
+##### 胸腺
+
+- 位于胸骨后面
+- 能分泌胸腺激素，促使淋巴细胞发育成熟
+
+##### 扁桃体
+
+- 位于消化道和呼吸道的交汇处
+- 具有淋巴结
+- 具有抗细菌、抗病毒的防御功能
+
+##### 淋巴结
+
+- 扁圆形或椭圆形的小体
+- 沿着淋巴管分布
+- 在人的颈部、腹股沟和腋窝密集
+- 细菌侵入人体发生感染时，淋巴结会**肿大疼痛**
+  - 如喉咙发炎时，下巴颏下会有两个肿块，就是淋巴结
+  - 炎症消失后是，淋巴结肿快会自然缩小
+
+### 10.4.2 淋巴系统的功能
+
+#### 淋巴循环
+
+- 淋巴经各级淋巴管和淋巴结后，汇入**锁骨下静脉**，进入血液循环
+- 淋巴循环时**单向流动**而不形成真正的循环
+- 淋巴循环中，**淋巴结**是**淋巴回流的重要滤器**
+  - 淋巴结内的淋巴细胞能**吞噬细菌及其他引起疾病的微生物**
+  - 对机体起着防御和保护作用
+
+## 10.5 人体的排泄
+
+- 排泄：将体内物质代谢的终产物、多余的物质以及进入人体内的异物，经血液循环由一定的途径排出体外的过程
+- 排泄通过泌尿系统、肺和皮肤进行
+
+### 10.5.1 泌尿系统的组成
+
+- 主要功能：形成尿液和排出尿液
+- 
 
 [^抗凝剂]: 如：柠檬酸钠，防止血液凝固
 [^废料]: 如：尿素、尿酸等等
 [^凝集]: 在正常情况下红细胞是均匀分布在血液中的。当加入同种其他个体的血清时，有时可使均匀悬浮在血液中的红细胞聚集成团，这便是红细胞的凝集。
+[^低密度脂蛋白]: 负责在血液内运载脂肪酸分子至全身供细胞使用
