--- a/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
@@ -21,6 +21,8 @@
 - 空气的热能转移到棉花上的乙醚，引燃了棉花
 - 机械能 → 热能
 
+### 7.1.2 机械能转化为热能
+
 #### 气体对外做功实验
 
 ![气体对外做功实验](https://i.ibb.co/ZX6TBFn/image.png)
@@ -53,6 +55,16 @@
 - 燃料产生的高温高压的燃气推动火箭向前运动
 - 热能 → 机械能
 
+#### 变凉的喷雾剂罐体
+
+- 罐内压缩气体喷出，体积膨胀对外做功，罐内液体汽化吸热
+- 热能减少，温度降低
+
+#### 烈日下的汽水
+
+- 在烈日高温下汽水被放在一个表面温度已经很高的洋灰地上一段时间后，汽水已爆开且部分汽水流出
+- 液体粒子受热，粒子热运动加剧，汽水粒子对外做功
+
 #### 飞机空调
 
 - 飞机在高空飞行时，舱外气压大于舱内气压，需用空气压缩机把空气从舱外压进舱内
@@ -62,8 +74,8 @@
 
 ### 小总结
 
-|        | 做功                   | 热传递                         |
-| ------ | ---------------------- | ------------------------------ |
+|        |          做功          |             热传递             |
+| :----: | :--------------------: | :----------------------------: |
 | 不同点 | 机械能与热能的相互转化 | 热能在不同的物体之间发生了转移 |
 
 - **热传递和做功**两种改变物体热能的方法，对于改变物体热能是**等效**的。
@@ -77,6 +89,10 @@
 
 - 电流的热效应：电流通过导体时，使导体温度升高【电能 → 热能】
 - **电热器**：**利用电流的热效应工作**
+- 电流的热效应的弊端：
+  - 电路由于电流过载导致电线过热引起火灾
+  - 一些非电热器在使用过程和电能传输的过程中，由于电流的热效应导致电能损耗
+
 
 ### 7.2.2 电热的相关因素
 
