--- a/Science Notes/J3 Science Notes/9 消化与吸收.md
+++ b/Science Notes/J3 Science Notes/9 消化与吸收.md
@@ -42,7 +42,7 @@
 - **门齿**：切断食物
 - **犬齿**：撕裂食物
 - **前臼齿**：协助犬齿和臼齿
-- 臼齿：磨碎食物                      
+- **臼齿**：磨碎食物                      
 
 #### 牙齿的结构
 
@@ -106,12 +106,13 @@
   - 小肠壁上的**肠腺**所分泌的**肠液**直接流入小肠腔内
   - **肝脏**是**人体最大的消化腺**，分泌的**胆汁**流入**胆囊储存**
   - **胆汁和胰液**分别经**胆总管和胰管**流入**十二指肠**
-  - **胰液和肠液**里含有消化淀粉、麦芽糖、蛋白质、脂肪等**多种营养物质的消化酶**
+  - **胰液和肠液**里含有消化淀粉、麦芽糖、蛋白质、*脂肪*等**多种营养物质的消化酶**
   - **胆汁*不含消化酶***，它能促进**脂肪变成微小的颗粒**，增加与胰液和肠液中的脂肪酶的接触，**加速脂肪的消化**
   - ![食物分解的分子式](https://i.ibb.co/RCQ7sj8/image.png)
   - **食物残渣、部分水和无机盐**等借助小肠的蠕动被推入**大肠**
   - 大肠是消化道的最后一段，**起始段是阑尾**
   - 食物残渣或者肠内寄生虫落入其中易引起**阑尾炎**
+  - 人体的盲肠是位于回肠和结肠的交接处
   - 大肠能蠕动，但**没有消化功能**
   - 大肠**吸收食物中的一部分水分**使之**形成粪便**
   - **粪便**通过大肠末端的**肛门排出**
